--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
 <!-- <app-admin-header></app-admin-header> -->
 <!-- <app-gust-header></app-gust-header> -->
 <!-- <app-vendor-header></app-vendor-header> -->
-<!-- <app-customer-header></app-customer-header> -->
+<app-customer-header></app-customer-header>
 <!-- <app-NotAuthorized></app-NotAuthorized> -->
 <!-- <app-NotFound></app-NotFound> -->
 <app-profile></app-profile>
