--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,199 +1,294 @@
-<div class="container-fluid">
-  <img class="img" src="../../assets/imgs/images.jpeg" alt="">
-  <h1 class="h1">Profile</h1>
-  <form class="row g-3 form1" [formGroup]="myForm" [formGroup]="signupForm">
-    <div class="nameField">
-        <div class="col-md-3 f1">
-          <label class="form-label">First Name</label>
-          <input type="text" formControlName="fname" [disabled] = "active? false: true"  class="form-control" placeholder="enter Fname" id="fname">
+<div class="body">
     
-        <div
-        class="alert alert-danger"
-        *ngIf="
-          signupForm.get('fname')?.errors &&
-          signupForm.get('fname')?.touched
-        "
-        style="
-          height: max-content;
-          min-height: 30px;
-          max-height: 100px;
-          margin-top: 3px;
-          padding-top: 4px;
-          padding-bottom: 0px;
-          overflow: none;
-          color: #666;
-        "
-      >
-        <p *ngIf="signupForm.get('fname')?.getError('required')">
-          First name is required
-        </p>
-        <p *ngIf="signupForm.get('fname')?.getError('minlength')">
-          name too short
-        </p>
-        <p *ngIf="signupForm.get('fname')?.getError('maxlength')">
-          name too long
-        </p>
-      </div>
-    </div>
-        <div class="col-md-3 f1">
-          <label class="form-label">Last Name</label>
-          <input type="text" formControlName="lname" [disabled] = "active? false: true" class="form-control" placeholder="enter Lname" id="lname">
-      
-        <div
-                class="alert alert-danger"
-                *ngIf="
-                  signupForm.get('lname')?.errors &&
-                  signupForm.get('lname')?.touched
-                "
-                style="
-                  height: max-content;
-                  min-height: 30px;
-                  max-height: 100px;
-                  margin-top: 3px;
-                  padding-top: 4px;
-                  padding-bottom: 0px;
-                  overflow: none;
-                  color: #666;
-                "
-              >
-                <p *ngIf="signupForm.get('lname')?.getError('required')">
-                  Last name is required
-                </p>
-                <p *ngIf="signupForm.get('lname')?.getError('minlength')">
-                  name too short
-                </p>
-                <p *ngIf="signupForm.get('lname')?.getError('maxlength')">
-                  name too long
-                </p>
-              </div>
-          </div>
-    </div>
-    <div class="space"></div>
-    <div class="col-md-6 f1">
-      <label class="form-label">Email</label>
-      <input type="email" formControlName="email" [disabled] = "active? false: true"  class="form-control" placeholder="example@gmail.com" id="email">
- 
     <div
-    class="alert alert-danger"
-    *ngIf="
-      signupForm.get('email')?.errors &&
-      signupForm.get('email')?.touched
-    "
-    style="
-      height: max-content;
-      min-height: 30px;
-      max-height: 100px;
-      margin-top: 3px;
-      padding-top: 4px;
-      padding-bottom: 0px;
-      overflow: none;
-      color: #666;
-    "
-  >
-    <p *ngIf="signupForm.get('email')?.getError('required')">
-      Email is required
-    </p>
-    <p *ngIf="signupForm.get('email')?.getError('email')">
-      Email is Invalid
-    </p>
-  </div>
-</div>
-<div class="space"></div>
-    <div class="col-md-6 f1">
-      <label for="password" class="form-label">Password</label>
-      <div class="pass-field">
-        <input
-          [type]="showPass ? 'text' : 'password'"
-          class="form-control"
-          id="password"
-          placeholder="***************"
-          formControlName="password"
-          [disabled] = "active? false: true" 
-        />
-
-        <button
-          mat-icon-button
-          matSuffix
-          (click)="displayPass()"
-          [attr.aria-label]="'Hide password'"
-          [attr.aria-pressed]="showPass"
-        >
-          <mat-icon>{{showPass ? "visibility" : "visibility_off"}}</mat-icon>
-        </button>
-      </div>
-      <div
-        class="alert alert-danger"
-        *ngIf="
-          signupForm.get('password')?.errors &&
-          signupForm.get('password')?.touched
-        "
-        style="
-          height: max-content;
-          min-height: 30px;
-          max-height: 100px;
-          margin-top: 3px;
-          padding-top: 4px;
-          padding-bottom: 0px;
-          overflow: none;
-          color: #666;
-        "
-      >
-        <p *ngIf="signupForm.get('password')?.getError('required')">
-          Password is required
-        </p>
-        <p
-          *ngIf="
-            signupForm.get('password')?.getError('pattern') ||
-            signupForm.get('password')?.getError('minlength') ||
-            signupForm.get('password')?.getError('maxlength')
-          "
-        >
-          Password must be alphanumeric, length between 8 and 15
-        </p>
-      </div>
-
-</div>
-    <div class="space"></div>
-    <div class="col-md-6 f1">
-      <label for="phone" class="form-label">Phone</label>
-      <input type="text" class="form-control" [disabled] = "active? false: true"  formControlName="phone" id="phone" placeholder="+20**********">
-      <div
-      class="alert alert-danger"
-      *ngIf="
-        signupForm.get('phone')?.errors &&
-        signupForm.get('phone')?.touched
-      "
+      class="container"
       style="
-        height: max-content;
-        min-height: 30px;
-        max-height: 100px;
-        margin-top: 3px;
-        padding-top: 4px;
-        padding-bottom: 0px;
-        overflow: none;
-        color: #666;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #11435a;
+        position: relative;
+        width: 100%;
+        max-width: 700px;
+        background: rgba(255, 255, 255, 0.8);
+        padding: 30px;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       "
     >
-      <p *ngIf="signupForm.get('phone')?.getError('required')">
-        Phone is required
-      </p>
-      <p
-        *ngIf="
-          signupForm.get('phone')?.getError('minlength') ||
-          signupForm.get('phone')?.getError('maxlength')
-        "
+      <form
+        [formGroup]="signupForm"
+        (ngSubmit)="submitSignupForm(signupForm)"
+        class="row g-3"
       >
-        Phone is Invalid
-      </p>
+        <div class="container">
+          <div
+            class="profile_img"
+            style="justify-content: center; align-items: center; display: flex"
+          >
+            <img
+              src="../../../assets/imgs/pfp.jpg"
+              alt=""
+              class="img-fluid shadow"
+              style="
+                position: relative;
+                border-radius: 50%;
+                width: 70px;
+                justify-content: center;
+              "
+            />
+          </div>
+        </div>
+        <h2 style="display: flex; justify-content: center">Profile</h2>
+        <div class="col-md-6">
+          <label for="fname" class="form-label">First Name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="fname"
+            placeholder="e.g. John"
+            formControlName="fname"
+             
+          />
+          <div
+            class="alert alert-danger"
+            *ngIf="
+              signupForm.get('fname')?.errors && signupForm.get('fname')?.touched
+            "
+            style="
+              height: max-content;
+              min-height: 30px;
+              max-height: 100px;
+              margin-top: 3px;
+              padding-top: 4px;
+              padding-bottom: 0px;
+              overflow: none;
+              color: #666;
+            "
+          >
+            <p *ngIf="signupForm.get('fname')?.getError('required')">
+              First name is required
+            </p>
+            <p *ngIf="signupForm.get('fname')?.getError('minlength')">
+              name too short
+            </p>
+            <p *ngIf="signupForm.get('fname')?.getError('maxlength')">
+              name too long
+            </p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <label for="lname" class="form-label">Last Name</label>
+          <input
+           
+            type="text"
+            class="form-control"
+            id="lname"
+            placeholder="e.g. Smith"
+            formControlName="lname"
+          />
+          <div
+            class="alert alert-danger"
+            *ngIf="
+              signupForm.get('lname')?.errors && signupForm.get('lname')?.touched
+            "
+            style="
+              height: max-content;
+              min-height: 30px;
+              max-height: 100px;
+              margin-top: 3px;
+              padding-top: 4px;
+              padding-bottom: 0px;
+              overflow: none;
+              color: #666;
+            "
+          >
+            <p *ngIf="signupForm.get('lname')?.getError('required')">
+              First name is required
+            </p>
+            <p *ngIf="signupForm.get('lname')?.getError('minlength')">
+              name too short
+            </p>
+            <p *ngIf="signupForm.get('lname')?.getError('maxlength')">
+              name too long
+            </p>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <label for="email" class="form-label">Email</label>
+          <input
+             
+            type="email"
+            class="form-control"
+            id="email"
+            placeholder="name@example.com"
+            formControlName="email"
+          />
+          <div
+            class="alert alert-danger"
+            *ngIf="
+              signupForm.get('email')?.errors && signupForm.get('email')?.touched
+            "
+            style="
+              height: max-content;
+              min-height: 30px;
+              max-height: 100px;
+              margin-top: 3px;
+              padding-top: 4px;
+              padding-bottom: 0px;
+              overflow: none;
+              color: #666;
+            "
+          >
+            <p *ngIf="signupForm.get('email')?.getError('required')">
+              Email is required
+            </p>
+            <p *ngIf="signupForm.get('email')?.getError('email')">
+              Email is Invalid
+            </p>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <label for="pass" class="form-label">Password</label>
+          <div class="pass-field">
+            <input
+               
+              [type]="showPass ? 'text' : 'password'"
+              class="form-control"
+              id="pass"
+              placeholder="***************"
+              formControlName="password"
+            />
+            <button
+              mat-icon-button
+              matSuffix
+              (click)="displayPass()"
+              [attr.aria-label]="'Hide password'"
+              [attr.aria-pressed]="showPass"
+            >
+              <mat-icon>{{
+                showPass ? "visibility" : "visibility_off"
+              }}</mat-icon>
+            </button>
+          </div>
+          <div
+            class="alert alert-danger"
+            *ngIf="
+              signupForm.get('password')?.errors &&
+              signupForm.get('password')?.touched
+            "
+            style="
+              height: max-content;
+              min-height: 30px;
+              max-height: 100px;
+              margin-top: 3px;
+              padding-top: 4px;
+              padding-bottom: 0px;
+              overflow: none;
+              color: #666;
+            "
+          >
+            <p *ngIf="signupForm.get('password')?.getError('required')">
+              Password is required
+            </p>
+            <p
+              *ngIf="
+                signupForm.get('password')?.getError('pattern') ||
+                signupForm.get('password')?.getError('minlength') ||
+                signupForm.get('password')?.getError('maxlength')
+              "
+            >
+              Password must be alphanumeric, length between 8 and 15
+            </p>
+          </div>
+        </div>
+        <div class="col-md-12" >
+          <label for="phone" class="form-label">Phone</label>
+          <input 
+            type="tel"
+            class="form-control"
+            id="phone"
+            placeholder="+20**********"
+            formControlName="phone"
+          />
+          <div
+            class="alert alert-danger"
+            *ngIf="
+              signupForm.get('phone')?.errors && signupForm.get('phone')?.touched
+            "
+            style="
+              height: max-content;
+              min-height: 30px;
+              max-height: 100px;
+              margin-top: 3px;
+              padding-top: 4px;
+              padding-bottom: 0px;
+              overflow: none;
+              color: #666;
+            "
+          >
+            <p *ngIf="signupForm.get('phone')?.getError('required')">
+              Phone is required
+            </p>
+            <p
+              *ngIf="
+                signupForm.get('phone')?.getError('minlength') ||
+                signupForm.get('phone')?.getError('maxlength')
+              "
+            >
+              Phone is Invalid
+            </p>
+          </div>
+        </div>
+        <div class="col-md-12" *ngIf="isViewMode">
+          <button
+            type="submit"
+            class="btn"
+            [disabled]="signupForm.invalid"
+            (click)="toggleEdit()"
+          >
+            <span *ngIf="!showLoader">Edit</span>
+            <div style="justify-content: center; display: flex">
+              <mat-spinner
+                style="width: 3em; height: 2em"
+                *ngIf="showLoader"
+              ></mat-spinner>
+            </div>
+          </button>
+        </div>
+        
+        <div class="col-md-12 d-flex justify-content-center" *ngIf="!isViewMode">
+            <div style="justify-content: center; display: flex">
+                <mat-spinner
+                    style="width: 3em; height: 2em"
+                    *ngIf="showLoader"
+                ></mat-spinner>
+                </div>
+        </div>
+        <div class="col-md-12 d-flex " *ngIf="!isViewMode && !showLoader">
+          <button
+            type="submit"
+            class="btn mx-2"
+            [disabled]="signupForm.invalid"
+            (click)="toggleEdit()"
+          >
+            <span>Save</span>
+          </button>
+          <button
+            type="submit"
+            class="btn mx-2"
+            (click)="resetForm()"
+          >
+            <span>Reset</span>
+          </button>
+          <button
+            type="submit"
+            class="btn mx-2"
+            (click)="cancelEdit()"
+          >
+            <span>Cancel</span>
+          </button>
+        </div>
+      </form>
     </div>
-    </div>
-    <div class="space"></div>
-    <button (click)="active = false" *ngIf="active; else btn" class='btn btn-outline-warning btn1'>Edit</button>
-
-    <ng-template #btn>
-      <button class='btn btn-outline-warning btn2'>Save</button>
-      <button class='btn btn-outline-warning btn2'>Cancel</button>
-      <input type="reset" value="Reset" (click)="resetForm()" class='btn btn-outline-warning btn2'>
-    </ng-template>
-  </form>
-</div>
+  </div>
