--- a/src/app/components/list-item/vendor-movie-list-item/vendor-movie-list-item.component.html
+++ b/src/app/components/list-item/vendor-movie-list-item/vendor-movie-list-item.component.html
@@ -93,7 +93,7 @@
         <!-- Action Buttons -->
         <div class="text-end">
           <button 
-            class="btn btn-success me-2" 
+            class="btn btn-danger me-2" 
             id="removeButton" 
             (click)="removeMovie()">
             Remove
