--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,9 @@
 </div> -->
 
 <!-- <app-detailed-movieCard></app-detailed-movieCard> -->
-<app-login></app-login>
+<!-- <app-login></app-login> -->
  
-<app-signup></app-signup>
+<!-- <app-signup></app-signup> -->
 <!-- <app-feedback></app-feedback> -->
 
+<app-admin-home></app-admin-home>
