--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,4 +11,5 @@
 <!-- <app-signup></app-signup> -->
 <!-- <app-feedback></app-feedback> -->
 
-<app-admin-home></app-admin-home>
+<!-- <app-admin-home></app-admin-home> -->
+ <app-guest-home></app-guest-home>
