--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
 <!-- <app-vendor-header></app-vendor-header> -->
 <!-- <app-vendor-header></app-vendor-header> -->
 <!-- <app-dashboard></app-dashboard> -->
-<!-- <app-footer></app-footer> --> 
+<!-- <app-footer></app-footer> -->
 <!-- <app-ticket></app-ticket> -->
 
 <!-- Button trigger modal -->
@@ -61,5 +61,7 @@
   </div>
 </div> -->
 
-<!-- <app-footer></app-footer> --> 
-<app-seat-list></app-seat-list>
+<!-- <app-footer></app-footer> -->
+<!-- <app-seat-list></app-seat-list> -->
+<!-- <app-seat></app-seat> -->
+<app-reservation-page></app-reservation-page>
