--- a/src/app/components/list/seat-list/seat-list.component.css
+++ b/src/app/components/list/seat-list/seat-list.component.css
@@ -1,39 +1,40 @@
 .seatListBody {
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    height: 70vh;
+    /* height: 70vh; */
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to bottom right, #9d9dff, #1f1f41);
     color: #fff;
-    flex-wrap: nowrap;
-    /* overflow: scroll; */
+    flex-wrap: wrap;
 }
 
 .status-legend {
-    position: fixed;
-    top: 150px;
-    right: 10px;
-    display: flex;
-    gap: 20px;
-    z-index: 1100;
-    align-items: center;
+  position: relative;
+  /* top: 60px; */
+  /* right: 10px; */
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
+  z-index: 1;
+  align-items: center;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
 }
 
 /* Status item container */
 .status-item {
     display: flex;
+    justify-content: center;
     align-items: center;
     gap: 5px;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
 
 }
 
 .status-box {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     border-radius: 4px;
     border: 1px solid #333;
 }
@@ -64,30 +65,40 @@
 
 .cinema {
     display: flex;
+    /* position: relative; */
     /* overflow: scroll; */
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     background-color: #1f1f41;
-    padding: 20px 30px 20px   0px;
+    padding: 20px;
     border-radius: 15px;
-    max-width: 810px;
+    width: 100%;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
-    
+    max-width: 700px;
 }
 
 
 .row {
     display: flex;
     justify-content: center;
-    margin: 0 10px;
+    align-items: center;
     flex-wrap: nowrap;
+    margin: 0;
+    max-width: 100%;
 }
 
 
 .seat {
-    width: 40px;
-    height: 40px;
-    margin: 5px;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  max-width: 40px;
+  max-height: 40px;
+  margin: 5px;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
 }
 
 
@@ -100,14 +111,16 @@
     display: flex;
     flex-direction: row;
     /* overflow: scroll; */
-    flex-wrap: nowrap;
-    gap: 10px;
-    align-items: flex-end;
+    /* flex-wrap: wrap; */
+    align-items: center;
     justify-content: center;
+    max-width: 100%;
 }
 
 .rowContainer
 {
-    overflow: scroll;
-    margin: 10px
+    overflow:hidden;
+    margin: 10px;
+    max-width: 100%;
 }
+
