--- a/src/app/components/movieCard/detailed-movieCard/detailed-movieCard.component.html
+++ b/src/app/components/movieCard/detailed-movieCard/detailed-movieCard.component.html
@@ -1,4 +1,7 @@
-<div class="container">
+<div
+  class="container"
+  style="margin-top: 70px; border-bottom: 2px solid #ccc; margin-bottom: 50px"
+>
   <div class="row">
     <!-- Image Section -->
     <div
