--- a/src/app/components/seat/seat.component.css
+++ b/src/app/components/seat/seat.component.css
@@ -4,14 +4,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    max-width: 40px;
+    max-height: 40px;
     color: var(--black);
     background-color: #ffffff;
     border: 1px solid #666;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s, transform 0.2s;
+    padding: 10px;
 }
 
 .seat:hover {
@@ -38,13 +39,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    max-width: 40px;
+    max-height: 40px;
     color: var(--black);
     border: 1px solid #666;
     border-radius: 5px;
     cursor: not-allowed;
-
+    padding: 10px;
 }
 
 
