checkout button done

--- a/src/app/components/list/seat-list/seat-list.component.html
+++ b/src/app/components/list/seat-list/seat-list.component.html
@@ -1,7 +1,4 @@
-<div
-  class="body"
-  style="margin: 10px; border-top: 3px solid #ccc; padding-top: 20px"
->
+<div class="body" style="border-top: 3px solid #ccc; padding: 20px">
   <div class="showtime">
     <h3>Showtimes</h3>
     <mat-form-field>
@@ -82,5 +79,16 @@
         </div>
       </div>
     </div>
+  </div>
+  <div
+    class="checkout"
+    style="
+      margin-top: 20px;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+    "
+  >
+    <button class="btn">Checkout</button>
   </div>
 </div>
