--- a/src/app/pages/customer/reservation-page/reservation-page.component.html
+++ b/src/app/pages/customer/reservation-page/reservation-page.component.html
@@ -3,7 +3,10 @@
 <app-seat-list></app-seat-list>
 <app-checkout></app-checkout>
 <div>
-  <div class="col-md-12">
+  <div
+    class="col-md-12"
+    style="margin: 10px; border-top: 3px solid #ccc; padding-top: 20px"
+  >
     <google-map
       height="400px"
       width="100%"
