--- a/src/app/components/list/seat-list/seat-list.component.css
+++ b/src/app/components/list/seat-list/seat-list.component.css
@@ -124,3 +124,15 @@
     max-width: 100%;
 }
 
+.btn{
+  border-color: #212529;
+  border-width: 2px;
+  color:#212529;
+  width: 200px;
+  height: 50px;
+}
+
+.btn:hover{
+  background-color: #212529;
+  color:white;
+}
