movie array added to fix view problem

--- a/src/app/pages/customer/reservation-page/reservation-page.component.html
+++ b/src/app/pages/customer/reservation-page/reservation-page.component.html
@@ -1,5 +1,5 @@
 <app-customer-header></app-customer-header>
-<app-detailed-movieCard></app-detailed-movieCard>
+<app-detailed-movieCard [movie]="movies[0]"></app-detailed-movieCard>
 <app-seat-list></app-seat-list>
 <app-checkout></app-checkout>
 <div>
