--- a/src/app/pages/customer/reservation-page/reservation-page.component.html
+++ b/src/app/pages/customer/reservation-page/reservation-page.component.html
@@ -1,7 +1,7 @@
 <app-customer-header></app-customer-header>
 <app-detailed-movieCard [movie]="movies[0]"></app-detailed-movieCard>
 <app-seat-list></app-seat-list>
-<app-checkout></app-checkout>
+<!-- <app-checkout></app-checkout> -->
 <div>
   <div
     class="col-md-12"
