checkout under development

--- a/src/app/components/list/seat-list/seat-list.component.html
+++ b/src/app/components/list/seat-list/seat-list.component.html
@@ -87,9 +87,10 @@
       display: flex;
       justify-content: flex-end;
       align-items: center;
+      width: 100%;
     "
   >
+    <app-checkout></app-checkout>
     <button class="btn">Checkout</button>
   </div>
 </div>
-<app-checkout></app-checkout>
