admin/customer home pages updated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <!-- <app-movie-list></app-movie-list> -->
 
 <!-- <div class="list">
@@ -7,9 +6,9 @@
 
 <!-- <app-detailed-movieCard></app-detailed-movieCard> -->
 <!-- <app-login></app-login> -->
- 
+
 <!-- <app-signup></app-signup> -->
 <!-- <app-feedback></app-feedback> -->
 
-<!-- <app-admin-home></app-admin-home> -->
- <app-guest-home></app-guest-home>
+<app-admin-home></app-admin-home>
+<!-- <app-guest-home></app-guest-home> -->
