--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,8 +1,12 @@
-<div class="footer">
+<div class="footer bg-dark">
   <div class="container">
     <div class="box">
       <div class="image">
-        <img src="../../../assets/imgs/WhatsApp Image 2024-11-29 at 20.16.54_39526a40.jpg" class="logo" alt="Logo" />
+        <img
+          src="../../../assets/imgs/WhatsApp Image 2024-11-29 at 20.16.54_39526a40.jpg"
+          class="logo"
+          alt="Logo"
+        />
       </div>
     </div>
     <div class="box">
