reservation page done

--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -1,1 +1,4 @@
-<div class="checkout-container">s</div>
+<div class="checkout-container">
+  <div class="cart">Cart :</div>
+  <div class="total">10 $ x {{ noOfSeats }} = {{ total }} $</div>
+</div>
