--- a/src/app/components/list/seat-list/seat-list.component.html
+++ b/src/app/components/list/seat-list/seat-list.component.html
@@ -91,6 +91,6 @@
     "
   >
     <app-checkout></app-checkout>
-    <button class="btn">Checkout</button>
+    <button class="btn" (click)="checkout()">Checkout</button>
   </div>
 </div>
