--- a/src/app/components/list/seat-list/seat-list.component.css
+++ b/src/app/components/list/seat-list/seat-list.component.css
@@ -126,10 +126,12 @@
 
 .btn{
   border-color: #212529;
+  background-color: #eee;
   border-width: 2px;
   color:#212529;
   width: 200px;
   height: 50px;
+  border-radius: 0 5px 5px 0;
 }
 
 .btn:hover{
