movie list fixed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
 <!-- <app-users-list></app-users-list> -->
 <!-- <app-cinema-list></app-cinema-list> -->
 <!-- <app-users-list></app-users-list> -->
-<!-- <app-movie-list></app-movie-list> -->
+<app-movie-list></app-movie-list>
 
 <!--<app-dashboard></app-dashboard>-->
 <!--<app-footer></app-footer>-->
@@ -125,4 +125,4 @@
 <!-- <app-footer></app-footer> -->
 <!-- <app-seat-list></app-seat-list> -->
 <!-- <app-seat></app-seat> -->
-<app-reservation-page></app-reservation-page>
+<!-- <app-reservation-page></app-reservation-page> -->
