reservation list added to header

--- a/src/app/components/list-item/reservation-list-item/reservation-list-item.component.html
+++ b/src/app/components/list-item/reservation-list-item/reservation-list-item.component.html
@@ -1,6 +1,6 @@
 <div class="reservation-list">
   <mat-accordion>
-    <mat-expansion-panel *ngFor="let reservation of reservations">
+    <mat-expansion-panel>
       <mat-expansion-panel-header>
         <mat-panel-title>
           {{ reservation.movie }}
