--- a/src/app/components/header/customer-header/customer-header.component.html
+++ b/src/app/components/header/customer-header/customer-header.component.html
@@ -21,10 +21,30 @@
 
         <mat-menu #menu="matMenu">
              <button mat-menu-item class="link" ><a href="#" class="link">Profile</a></button>
-             <button mat-menu-item class="link" ><a href="#" class="link">Reservations</a></button>
+             <button mat-menu-item class="link" ><a href="#" class="link" data-bs-toggle="modal" data-bs-target="#exampleModal">Reservations</a></button>
              <button mat-menu-item ><button style="margin-left: 30px;" class='btn btn-warning' >LogOut</button></button>
          </mat-menu>
     </div>
 </mat-toolbar>
 
 <hr>
+
+<!-- Button trigger modal -->
+<!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    Launch demo modal
+</button> -->
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Reservation List</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+            <app-reservation-list></app-reservation-list>
+        </div>
+      </div>
+    </div>
+  </div>
