vendor list page done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 
 <!-- <app-detailed-movieCard></app-detailed-movieCard> -->
 <!-- <app-login></app-login> -->
- 
+
 <!-- <app-signup></app-signup> -->
 <!-- <app-login></app-login> -->
 
@@ -59,7 +59,7 @@
 <!-- <app-vendor-header></app-vendor-header> -->
 <!-- <app-vendor-header></app-vendor-header> -->
 <!-- <app-dashboard></app-dashboard> -->
-<!-- <app-footer></app-footer> --> 
+<!-- <app-footer></app-footer> -->
 <!-- <app-ticket></app-ticket> -->
 
 <!-- Button trigger modal -->
@@ -100,17 +100,16 @@
   </div>
 </div> -->
 
-<!-- <app-footer></app-footer> --> 
+<!-- <app-footer></app-footer> -->
 <!-- <app-seat-list></app-seat-list> -->
- <!-- <app-NotAuthorized></app-NotAuthorized> -->
- <!-- <app-NotFound></app-NotFound> -->
-  <!-- <app-profile></app-profile> -->
-  <!-- <app-faq></app-faq> -->
+<!-- <app-NotAuthorized></app-NotAuthorized> -->
+<!-- <app-NotFound></app-NotFound> -->
+<!-- <app-profile></app-profile> -->
+<!-- <app-faq></app-faq> -->
 <!-- <app-vendor-header></app-vendor-header> -->
 <!-- <app-dashboard></app-dashboard> -->
- <!-- <app-vendor-movie-list></app-vendor-movie-list> -->
+<!-- <app-vendor-movie-list></app-vendor-movie-list> -->
 <!-- <app-footer></app-footer> -->
-
 
 <!-- <app-slideshow></app-slideshow> -->
 <!-- <app-vendor-home></app-vendor-home> -->
@@ -121,3 +120,10 @@
 
 <!-- <app-admin-home></app-admin-home> -->
 <!-- <app-guest-home></app-guest-home> -->
+
+<!-- <app-users-list></app-users-list> -->
+<!-- <app-reservation-list></app-reservation-list> -->
+<app-vendor-list-page></app-vendor-list-page>
+<!-- <app-movie-list></app-movie-list> -->
+<!-- <app-cinema-list></app-cinema-list> -->
+<!-- <app-feedback-list></app-feedback-list> -->
