--- a/src/app/components/list-item/feedback-list-item/feedback-list-item.component.html
+++ b/src/app/components/list-item/feedback-list-item/feedback-list-item.component.html
@@ -1,12 +1,18 @@
 <div class="container mt-4">
   <mat-accordion>
-    <mat-expansion-panel *ngFor="let feedback of feedbackList">
+    <mat-expansion-panel
+      *ngFor="let feedback of feedbackList"
+      style="border-radius: 8px"
+    >
       <mat-expansion-panel-header>
         <mat-panel-title>
           {{ feedback.email }}
         </mat-panel-title>
       </mat-expansion-panel-header>
-      <div class="p-3" style="background-color: #dbe9f1; border-radius: 8px; color: #000;">
+      <div
+        class="p-3"
+        style="background-color: #dbe9f1; border-radius: 8px; color: #000"
+      >
         <p>{{ feedback.feedback }}</p>
       </div>
     </mat-expansion-panel>
