--- a/src/app/components/list/feedback-list/feedback-list.component.html
+++ b/src/app/components/list/feedback-list/feedback-list.component.html
@@ -1,4 +1,17 @@
 <div class="feedback-list">
-  <h2 class="text-dark">Feedback List</h2>
-  <app-feedback-list-item [feedbackList]="feedbackList"></app-feedback-list-item>
+  <h2
+    style="
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: var(--primary);
+      font-style: italic;
+      padding: 10px;
+    "
+  >
+    Feedback List
+  </h2>
+  <app-feedback-list-item
+    [feedbackList]="feedbackList"
+  ></app-feedback-list-item>
 </div>
