--- a/src/app/pages/admin/vendor-list-page/vendor-list-page.component.html
+++ b/src/app/pages/admin/vendor-list-page/vendor-list-page.component.html
@@ -1,3 +1,47 @@
-<p>
-  vendor-list-page works!
-</p>
+<app-admin-header></app-admin-header>
+<div style="margin-top: 50px">
+  <app-users-list></app-users-list>
+  <div
+    style="
+      margin: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    "
+  >
+    <!-- Button trigger modal -->
+    <button
+      type="button"
+      class="btn"
+      data-bs-toggle="modal"
+      data-bs-target="#vendorForm"
+      #openButton
+    >
+      Add Vendor
+    </button>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="vendorForm"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body"><app-vendor-form></app-vendor-form></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<app-footer></app-footer>
