--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -123,7 +123,10 @@
 
 <!-- <app-users-list></app-users-list> -->
 <!-- <app-reservation-list></app-reservation-list> -->
-<app-vendor-list-page></app-vendor-list-page>
+<!-- <app-vendor-list-page></app-vendor-list-page> -->
 <!-- <app-movie-list></app-movie-list> -->
 <!-- <app-cinema-list></app-cinema-list> -->
 <!-- <app-feedback-list></app-feedback-list> -->
+<!-- <app-cinema-list-page></app-cinema-list-page> -->
+<!-- <app-vendor-movie-list></app-vendor-movie-list> -->
+<!-- <app-vendor-movie-list-page></app-vendor-movie-list-page> -->
