--- a/src/app/pages/admin/vendor-list-page/vendor-list-page.component.html
+++ b/src/app/pages/admin/vendor-list-page/vendor-list-page.component.html
@@ -22,13 +22,14 @@
 
     <!-- Modal -->
     <div
-      class="modal fade"
+      class="modal fade bd-example-modal-lg"
+      role="dialog"
       id="vendorForm"
       tabindex="-1"
-      aria-labelledby="exampleModalLabel"
+      aria-labelledby="myLargeModalLabel"
       aria-hidden="true"
     >
-      <div class="modal-dialog">
+      <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header">
             <button
