--- a/src/app/components/form/cinema-form/cinema-form.component.css
+++ b/src/app/components/form/cinema-form/cinema-form.component.css
@@ -1,7 +1,7 @@
 .body{
   width: 100%;
-  background-image: url('../../../../assets/imgs/cinema.jpeg'); 
-  background-attachment: fixed;
+  background-image: url('../../../../assets/imgs/cinema.jpeg');
+  /* background-attachment: fixed; */
   background-size: cover;
   color: white;
   align-items: center;
