--- a/src/app/components/list/vendor-movie-list/vendor-movie-list.component.html
+++ b/src/app/components/list/vendor-movie-list/vendor-movie-list.component.html
@@ -1,4 +1,6 @@
 <div class="vendor-list">
-  <h2>vendor list</h2>
-  <app-vendor-movie-list-item [showtime]="showList" [editList]="List"></app-vendor-movie-list-item>
+  <app-vendor-movie-list-item
+    [showtime]="showList"
+    [editList]="List"
+  ></app-vendor-movie-list-item>
 </div>
