--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
 <!-- <app-cinema-list></app-cinema-list> -->
 <!-- <app-users-list></app-users-list> -->
 <!-- <app-cinema-list></app-cinema-list> -->
-<app-users-list></app-users-list>
+<!-- <app-users-list></app-users-list> -->
 <!-- <app-movie-list></app-movie-list> -->
 
 <!--<app-dashboard></app-dashboard>-->
@@ -104,3 +104,5 @@
 <!-- <app-seat-list></app-seat-list> -->
 <!-- <app-seat></app-seat> -->
 <!-- <app-reservation-page></app-reservation-page> -->
+
+<router-outlet></router-outlet>
