--- a/src/app/components/home/guest-home/guest-home.component.html
+++ b/src/app/components/home/guest-home/guest-home.component.html
@@ -177,13 +177,13 @@
         "
       >
         <div class="contact-item">
-          <p>Email: email1@example.com</p>
+          <p>Email: email1&#64;example.com</p>
         </div>
         <div class="contact-item">
-          <p>Email: email2@example.com</p>
+          <p>Email: email2&#64;example.com</p>
         </div>
         <div class="contact-item">
-          <p>Email: email3@example.com</p>
+          <p>Email: email3&#64;example.com</p>
         </div>
       </div>
 
