--- a/src/app/components/list/feedback-list/feedback-list.component.html
+++ b/src/app/components/list/feedback-list/feedback-list.component.html
@@ -1,4 +1,6 @@
+<app-admin-header></app-admin-header>
 <div class="feedback-list">
   <h2 class="text-dark">Feedback List</h2>
   <app-feedback-list-item [feedbackList]="feedbackList"></app-feedback-list-item>
 </div>
+<app-footer></app-footer>
