--- a/src/app/components/movieCard/detailed-movieCard/detailed-movieCard.component.html
+++ b/src/app/components/movieCard/detailed-movieCard/detailed-movieCard.component.html
@@ -32,7 +32,7 @@
       </div>
       <div class="detail d-flex justify-content-between align-items-center">
         <h3 mat-subheader class="label">Cinema</h3>
-        <p class="value">{{ movie.Cinema.name }}</p>
+        <p class="value">{{ movie?.Cinema?.name }}</p>
       </div>
       <div class="detail d-flex justify-content-between align-items-center">
         <h3 mat-subheader class="label">Starring</h3>
