--- a/src/app/components/list-item/cinema-list-item/cinema-list-item.component.html
+++ b/src/app/components/list-item/cinema-list-item/cinema-list-item.component.html
@@ -23,7 +23,7 @@
       <mat-header-cell *matHeaderCellDef mat-sort-header
         >Location</mat-header-cell
       >
-      <mat-cell *matCellDef="let cinema">{{ cinema.location }}</mat-cell>
+      <mat-cell *matCellDef="let cinema">{{ cinema.city }}</mat-cell>
     </ng-container>
 
     <!-- Number of Movies Column -->
